--- a/angular.json
+++ b/angular.json
@@ -60,7 +60,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "TaskTracker:build"
+            "browserTarget": "TaskTracker:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
