--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.2",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
+    "express.js": "^1.0.0",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^3.2.0",
     "popper.js": "^1.14.7",
